0.7.0 - February 20, 2009
	Removed all param mapping behavior, code and tests
	  - this stuff just gunks up rsole and should be in an extension of some sort

0.6.9 - January 29, 2009
	Simplified facet response methods
	Main facet method is called #facets
	  - returns an array of Response::Facet instances
	  - each Facet instance has field and values attributes
	  -- the values attribute is an array with FacetValue instances which have @value and @hits
	Added ability to set Connection::Base @param_adapters using :dismax or :standard
	  instead of full class constant
	  updated comments for #search method
	Updated tests
	Bumped up version
 
0.6.8 - January 28, 2009
	New method added to RSolr::Connection::Base - #find_values_for_facet
	This method searches for facet values only, and sets the :rows param to 0
	- returns an RSolr::Response::Query::Base instance
	Example:
		search_params[:facets][:offset]=0
		search_params[:facets][:limit]=5
		response = solr.search_facet_by_name(:language_facet, search_params)

0.6.7 - January 27, 2009
	The Symbol extension in core_ext.rb was cause for some REALLY painful debuging - so I removed it :(
	This means no more :q.alt or :facet.field until RSolr gets a really nice query-builder module happening.

0.6.6 - January 26, 2009
	Added #get method helper to RSolr::Response::Query::DocExt
	# doc.get(key, opts)
	# key is the name of the field
	# opts is a hash with the following valid keys:
	#  - :sep - a string used for joining multivalued field values
	#  - :default - a value to return when the key doesn't exist
	# if :sep is nil and the field is a multivalued field, the array is returned

0.6.5 - January 26, 2009
	Removed to_mash everywhere, except for usage in RSolr::Response
	Added a #close method to the Direct adapter
		- this closes the connection and sets the @connection variable to nil
	Removed to_mash in RSolr::Connection::Base
	Changed RSolr::Response::Query::Doc to DocExt
		- this no longer extends Mash