@@ -1,11 +1,15 @@
-Remove those pesky warnings about constants already being defined etc. when running rake
+facets_by_hash method not ordered - needs to be an array - OrderedHash?
+
+Push HTTPClient into separate gem?
+
+Remove those pesky test warnings about constants already being defined etc.
 
 Look at http://lab.cisti-icist.nrc-cnrc.gc.ca/cistilabswiki/index.php/LuSql
 
   db_mapper = Solr::DBMapper.new(:host=>'', :database=>'')
 
 Check out http://github.com/dan-manges/mixology/tree/master for extensions/mixins framework?
-	
+
 Check out the following:
 
 http://wiki.apache.org/solr-data/attachments/solr(2d)ruby(2f)BrainStorming/attachments/rich.rb%200.1.3%20-%20Support%20for%20Rich%20Documents
@@ -14,8 +18,8 @@ http://wiki.apache.org/solr/solr-ruby/ToDo
 
 Connection pooling?
 
-Change query method to "get" ??? Then... specify the handler path directly in the query method?
-  solr.get('select', :q=>'blah')
-  solr.get('catalog', :q=>'blah')
-  
-  solr.add('update', )
+Work out a good query param mapping/dsl scheme, based on use cases
+
+solr.query 'select', :q=>'ipod'
+solr.add '<xml/>', :autoCommit=>true
+solr.add 'update', '<xml/>', :autoCommit=>true
