@@ -5,7 +5,7 @@ solr = RSolr.connect
 
 `cd ../apache-solr/example/exampledocs && ./post.sh ./*.xml`
 
-response = solr.search :q=>'ipod', :fq=>'price:[0 TO 50]', :per_page=>2, :page=>1
+response = solr.query :q=>'ipod', :fq=>'price:[0 TO 50]', :rows=>2, :start=>0
 
 solr.delete_by_query('*:*')
 
